Fixing overflowing flexbox container in contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,12 +1,12 @@
 /* Header */
-.header {
+/* .header {
     position: relative;
-}
+} */
 
 /* Contacts section */
 .contact {
     background-color: var(--main-green);
-    height: 90vh;
+    min-height: 90vh;
     flex-direction: column;
     justify-content: center;
     gap: 9.6rem;
